Fixed bug #55544 ob_gzhandler always conflicts with zlib.output_compression